objects/Job_Applicant__c.object
<CustomObject>
    <description>Job Applicant</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Job Applicants</relationshipLabel>
        <relationshipName>Job_Applicants</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Banglore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_No__c</fullName>
        <label>Job No</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Job Applicants</relationshipLabel>
        <relationshipName>Job_Applicants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job_Publish__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Publish</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_title__c</fullName>
        <formula>10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Title</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Interviewing</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job Applicant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>